[BUGFIX] Adjust topbar dropdown alignment
If the list module is not enabled for the user the dropdown
would not stay within the viewport.

Resolves: #63508
Releases: master
Reviewed-on: http://review.typo3.org/34927
Tested-by: Andreas Fernandez <a.fernandez@scripting-base.de>
Tested-by: Jigal van Hemert <jigal.van.hemert@typo3.org>

--- a/typo3/sysext/t3skin/Resources/Private/Styles/TYPO3/_topbar.less
+++ b/typo3/sysext/t3skin/Resources/Private/Styles/TYPO3/_topbar.less
@@ -204,6 +204,8 @@
 		}
 	}
 	.dropdown-menu {
+		left: auto;
+		right: 0;
 		margin: 0;
 		padding: (@topbar-dropdown-padding / 2) @topbar-dropdown-padding;
 		color: @topbar-dropdown-color;
@@ -383,6 +385,7 @@
 // Livesearch
 .live-search-list {
 	.typo3-topbar-navigation-items .dropdown-menu();
+	right: auto;
 	padding: 0;
 	.x-toolbar {
 		padding: 0;
